[package]
name = "symmetric-build-tools"
version = "0.1.0"
edition = "2021"
authors = ["htmlcsjs", "Symmetric Devs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.17", features = ["derive"] }
serde_json = "1.0.87"
serde = {version = "1.0", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
auto_from = "0.3.0"