[package]
name = "symmetric-build-tools"
version = "0.1.0"
edition = "2021"
authors = ["htmlcsjs", "Symmetric Devs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
serde_json = "1.0.94"
serde = { version = "1.0.154", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde_repr = "0.1.11"
toml = "0.7.3"
